# HackLuminary

./: .gitignore  ENTERPRISE_UI_UX_AUDIT.md  EXAMPLES.md  IMPLEMENTATION.md  PILOT_CHECKLIST.md  README.md  bcom-pop-presentation.md  hackluminary.toml  presentation.md  pyproject.toml  requirements.txt  setup.py
.github/actions/generate-deck/: action.yml
.github/workflows/: ci.yml  generate-deck.yml  release.yml
hackluminary/: __init__.py  ai_pipeline.py  analyzer.py  artifacts.py  benchmark.py  cli.py  config.py  doctor.py  document_parser.py  errors.py  evidence.py  git_context.py  image_fetcher.py  image_indexer.py  image_processor.py  ml_engine.py  models.py  package_builder.py  pipeline.py  presentation_generator.py  presets.py  quality.py  release_assets.py  slides.py  studio_server.py  studio_session.py  telemetry.py  test-pres  visual_selector.py
hackluminary/inference/: llamacpp_backend.py
hackluminary/studio/: presenter.css  presenter.js  studio.css  studio.js
install/: install.ps1  install.sh
scripts/: git-switch-branch.ps1
scripts/release/: build_standalone.py  render_homebrew_formula.py  render_winget_manifest.py
tests/: test_analyzer.py  test_artifacts.py  test_benchmark.py  test_cli.py  test_document_parser.py  test_evidence.py  test_git_context.py  test_image_indexer.py  test_package_builder.py  test_presentation_generator.py  test_presenter_assets.py  test_quality_visuals.py  test_release_assets.py  test_studio_server.py  test_studio_session.py  test_telemetry.py  test_universal_support.py  test_visual_selector.py
