[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackluminary"
version = "2.1.0"
description = "Offline-first, branch-aware hackathon presentation generator"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "MindCore"}
]
dependencies = [
  "click>=8.1,<9",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
ml = [
  "llama-cpp-python>=0.2.90",
  "huggingface_hub>=0.25",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
hackluminary = "hackluminary.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["hackluminary*"]

[tool.setuptools.package-data]
hackluminary = ["studio/*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
