[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackluminary"
version = "2.3.0"
description = "Offline-first, branch-aware hackathon presentation generator"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "MindCore"}
]
keywords = [
  "hackathon",
  "presentation",
  "slides",
  "generator",
  "offline",
  "git",
  "branch-aware",
  "markdown",
  "html",
  "ai",
  "llm",
  "studio",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Processing :: Markup :: HTML",
  "Topic :: Utilities",
]
dependencies = [
  "click>=8.1,<9",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
ml = [
  "llama-cpp-python>=0.2.90",
  "huggingface_hub>=0.25",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
release = [
  "build>=1.2",
  "pyinstaller>=6.10",
]

[project.urls]
Homepage = "https://github.com/ch1kim0n1/HackLuminary"
Repository = "https://github.com/ch1kim0n1/HackLuminary"
"Bug Tracker" = "https://github.com/ch1kim0n1/HackLuminary/issues"

[project.scripts]
hackluminary = "hackluminary.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["hackluminary*"]

[tool.setuptools.package-data]
hackluminary = ["studio/*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
